Change color scheme, add sample custom components Add data from file and use it as an example for the table view Fix bug with removing items Add option to remove all selected items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">GenericTableView Demo</string>
+    <string name="click_me">Click Me!</string>
+    <string name="remove">Remove</string>
+    <string name="id">ID</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="full_time">Full time?</string>
+    <string name="employee_list">Employee List</string>
+    <string name="remove_all">Remove selected</string>
 </resources>
